<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotoLocator</string>
    <string name="action_settings">Settings</string>
    <string name="textview_username">User Name</string>
    <string name="textview_password">Password</string>
    <string name="textview_comfirm_password">Confirm Password</string>
    <string name="textview_email">E-mail</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_register">Register</string>
    <string name="button_takephoto">Take Photo</string>
    <string name="button_send">Send</string>

</resources>
